java.lang.classfile API support for jtreg nullness tests (#1235)
Co-authored-by: Werner Dietl <wdietl@gmail.com>
Co-authored-by: Claude Opus 5 <noreply@anthropic.com>